--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,8 @@
-Django>=1.0.0
-xhtml2pdf
-pisa
+Django==1.5
+PIL==1.1.7
+argparse==1.2.1
+html5lib==0.95
+pyPdf==1.13
+reportlab==2.6
+wsgiref==0.1.2
+xhtml2pdf==0.0.4
